--- a/modulo-II/HTML5-CSS3-primeiro-exercicio/style.css
+++ b/modulo-II/HTML5-CSS3-primeiro-exercicio/style.css
@@ -1,19 +1,60 @@
 body {
-    background: #fcfcfc;
+    background: #f7f7f7;
+    font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
 }
 
 #title, .subtitle, .post_title {
-    color:blue;
+    color:#505050;
+}
+
+#title {
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: line-through;
+    color: #505050;
 }
 
 .post_title {
     font-size: 16px;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 15px;
 }
 
 .post {
     background: white;
     padding: 10px;
-    border: 3px solid #000;
-    margin: 10px;
+    border: 3px solid #505050;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.post_content {
+    margin: 0;
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
+.post_image {
+    margin-bottom: 15px;
+}
+
+.photo {
+    border: 1px solid #505050;
+    border-radius: 50px;
+}
+
+.contact_lists{
+    list-style-type: none;
+    padding-left: 15%;
+
+}
+
+.contact_lists .li .a {
+ text-decoration: none;
 }
